    - Fix `(foo..bar)..baz` performing `bar..baz` first. Only matters when using __concat
    - Fix parenthesis inside of concat chains not being representable inside the AST (data loss)
    - Fix the condition for repeatstat resolving references starting at the parent scope
      For example the condition in `repeat local foo; until foo` would index into `_ENV`
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2022-01-29
  Features:
    - Add continuing parsing after encountering syntax errors
  Changes:
    - Set linux lua executable flag [PR#1](https://github.com/JanSharp/phobos/pull/1)
  Bugfixes:
    - Fix error when requiring files using non normalized module names in Factorio
    - Fix vararg expressions sometimes not assigning values properly
      (for example `local foo, bar; foo, bar = ...`, while `local foo, bar = ...` worked)
    - Fix call or vararg expressions wrapped in `()` not forcing single results and potentially
      not even assigning to the right registers (for example `local foo, bar; foo, bar = (...)`)
    - Fix '\r\n' (or '\n\r' which shouldn't - but can - exist) breaking escaped newlines in strings
      In fact '\r' was mostly unhandled. Now all newlines get properly normalized to '\n' just like
      they do in regular Lua
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2021-10-25
  Changes:
    - Add missing thumbnail on mod portal
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2021-10-25
  Major Features:
    - Add command line tool for compiling
    - Implement parsing of Lua 5.2 source code to AST
    - Implement formatting AST to Lua 5.2 source code without making any format changes
      (except concats with parenthesis in the middle of them)
    - Implement compiling AST to Lua 5.2 bytecode